post/images fixes